--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,7 +19,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-banner: #1B1B1D;
+  --ifm-color-banner22: #1B1B1D;
   --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
