--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,6 +24,10 @@
   background-color: #1c1c1c;
 }
 
+.hero.hero--primary.heroBanner_src-pages-index-module {
+  background-color: #1c1c1c;
+}
+
 .footer {
   background-color: #1c1c1c;
 }
