--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,9 +24,9 @@
   background-color: #1c1c1c;
 }
 
-.hero.hero--primary.heroBanner_src-pages-index-module {
+/* .hero.hero--primary.heroBanner_src-pages-index-module {
   background-color: #1c1c1c;
-}
+} */
 
 .footer {
   background-color: #1c1c1c;
