--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,6 +27,9 @@
 .hero.hero--primary.heroBanner_src-pages-index-module {
   background-color: #1c1c1c;
 }
+.hero__title {
+  color: #EBEDF0;
+}
 
 .footer {
   background-color: #1c1c1c;
